--- a/material.angular.io/src/highlightjs/material-light.scss
+++ b/material.angular.io/src/highlightjs/material-light.scss
@@ -17,7 +17,7 @@
 }
 
 .hljs-comment {
-  color: #B0BEC5;
+  color: #616161;
   font-style: italic;
 }
 
