--- a/material.angular.io/src/styles/_markdown-theme.scss
+++ b/material.angular.io/src/styles/_markdown-theme.scss
@@ -12,7 +12,7 @@
 
   .docs-markdown {
     a {
-      color: mat-color($primary);
+      color: mat-color($primary, if($is-dark-theme, 200, default));
     }
 
     pre {
